# EOmaps

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  _config.yml  callbacks.py  codecov.yml  environment.yml  helpers.py  maps.py  pyproject.toml  rtmaps.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Publish_to_PyPi.yml  pre-commit.yml  testMaps.yml
docs/: EOmaps_examples.rst  FAQ.rst  Makefile  api.rst  api_annotations_markers_etc.rst  api_basics.rst  api_callbacks.rst  api_command_line_interface.rst  api_companion_widget.rst  api_compass.rst  api_data_visualization.rst  api_draw.rst  api_geodataframes.rst  api_gridlines.rst  api_inset_maps.rst  api_layout_editor.rst  api_logging.rst  api_misc.rst  api_naturalearth_features.rst  api_read_data.rst  api_scalebar.rst  api_utils.rst  api_vector_data.rst  api_webmaps.rst  conf.py  contribute.rst  contribute_env.yml  docs_env.yml  example_galery.rst  examples.rst  full_reference.rst  gen_autodoc_file.py  general.rst  index.rst  installation.md  installation.rst  logging.rst  make.bat  make2.bat  quickstart_quide.rst  (+4 more)
docs/_static/: custom_css.css
docs/_templates/: custom-class-template.rst  custom-module-template.rst  obj_with_attributes_no_toc.rst
docs/api/: api_Maps.rst  eomaps.eomaps.Maps.rst  eomaps.inset_maps.InsetMaps.rst  reference.rst
docs/custom_docs/: eomaps._cb_container._cb_container.add_temporary_artist.rst  eomaps._cb_container._cb_container.forward_events.rst  eomaps._cb_container._cb_container.share_events.rst  eomaps._cb_container._click_container._attach.rst  eomaps._cb_container._click_container._get.rst  eomaps._cb_container._click_container.remove.rst  eomaps._cb_container._click_container.set_sticky_modifiers.rst  eomaps._cb_container.cb_click_container.rst  eomaps._cb_container.cb_move_container.rst  eomaps._cb_container.cb_pick_container.rst  eomaps._cb_container.keypress_container.rst
docs/examples/: example_callbacks.py  example_customization.py  example_inset_maps.py  example_lines.py  example_multiple_maps.py  example_overlays.py  example_row_col_selector.py  example_scalebars.py  example_timeseries.py  example_webmaps.py
docs/notebooks/: inset_maps.ipynb  naturalearth_features.ipynb  widgets.ipynb
docs/source/: FAQ.rst  _shape_table.rst  conf.py  gen_autodoc_file.py  gen_gallery.py  index.rst  installation.md  installation.rst  quickstart_quide.rst  usage.rst
docs/source/_static/: custom-icon.js  custom_css.css  version_switcher.json
docs/source/_static/css/: custom.css  gallery.css
docs/source/_templates/: obj_with_attributes_no_toc.rst
docs/source/api/: autodoc_additional_props.rst  eomaps.eomaps.Maps.rst  reference.rst
docs/source/contribute/: contribute.rst
docs/source/examples/: EOmaps_examples.rst  example_contour.py  example_galery.rst  example_gridlines.py  example_overlays.py  example_row_col_selector.py  example_vector_data.py  index.rst
docs/source/user_guide/: index.rst
docs/source/user_guide/how_to_use/: api_basics.rst  api_data_visualization.rst  index.rst
docs/source/user_guide/interactivity/: api_callbacks.rst  api_companion_widget.rst  api_draw.rst  api_layout_editor.rst  api_utils.rst  index.rst  widgets.ipynb
eomaps/: NE_features.json  __init__.py  _blit_manager.py  _cb_container.py  _containers.py  _data_manager.py  _maps_base.py  _shapes.py  _version.py  _webmap.py  _webmap_containers.py  _zoom.py  annotation_editor.py  callbacks.py  cb_container.py  colorbar.py  compass.py  draw.py  eomaps.py  grid.py  helpers.py  inset_maps.py  layout_editor.py  mapsgrid.py  ne_features.py  projections.py  reader.py  scalebar.py  shapes.py  utilities.py  webmap_containers.py  widgets.py
eomaps/qtcompanion/: app.py  base.py  common.py  signal_container.py
eomaps/qtcompanion/widgets/: annotate.py  click_callbacks.py  draw.py  editor.py  extent.py  files.py  layer.py  peek.py  save.py  utils.py  wms.py
eomaps/scripts/: open.py
examples/: A_basic_map.ipynb  EOmaps_examples.ipynb  GALLERY_HEADER.rst  Plot_types.ipynb  using_WebMaps.ipynb
examples/00-basics/: basics.py  basics.rst
examples/01-Maps/: GALLERY_HEADER.rst  inset_maps.py  inset_maps.rst  multiple_maps.py  multiple_maps.rst
examples/02-images/: GALLERY_HEADER.rst  contour.rst  rgb.rst  webmaps.rst
examples/03-geometry/: GALLERY_HEADER.rst  lines.rst  vector_data.rst
examples/04-geomap_components/: GALLERY_HEADER.rst  gridlines.rst  scalebars.rst
examples/05-custom/: GALLERY_HEADER.rst  customization.rst
examples/06-overlays/: GALLERY_HEADER.rst  overlays.rst
examples/Maps/: example_inset_maps.ipynb  example_multiple_maps.ipynb
examples/basics/: GALLERY_HEADER.rst  example_basics.ipynb
examples/callbacks/: GALLERY_HEADER.rst  callbacks.rst  example_callbacks.ipynb  location_indicator.py  location_indicator.rst
examples/custom/: example_customization.ipynb
examples/geomap_components/: example_gridlines.ipynb  example_scalebars.ipynb
examples/geometry/: example_lines.ipynb  example_vector_data.ipynb
examples/images/: example_contour.ipynb  example_rgb.ipynb  example_webmaps.ipynb
examples/overlays/: example_overlays.ipynb
examples/widgets/: GALLERY_HEADER.rst  example_row_col_selector.ipynb  example_timeseries.ipynb  row_col_selector.rst  timeseries.rst
mapit/: __init__.py  mapit.py
tests/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py  example_contour.py  example_gridlines.py  example_inset_maps.py  example_lines.py  example_row_col_selector.py  test_WMS_capabilities.py  test_basic_functions.py  test_callbacks.py  test_config.py  test_doc_codeblocks.py  test_doc_notebooks.py  test_draggable_axes.py  test_drawer.py  test_env.yml  test_examples.py  test_from_file.py  test_layout_editor.py  test_plot_shapes.py  test_raster_aggregaton.py  test_scalebar.py  test_widgets.py
tests/_testdata/: testfile.csv  testfile.nc  testfile.tif
(+34 files in other folders)
