[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61.0" ]

[project]
name = "eomaps"
version = "8.3.1"
description = "A library to create interactive maps of geographical datasets."
readme = "README.md"
keywords = [ "Geographical Data", "Maps", "Plotting", "Visualization" ]

license = { file = "LICENSE" }

authors = [
  { name = "Raphael Quast", email = "raphael.quast@geo.tuwien.ac.at" },
]

requires-python = ">=3.8"

classifiers = [
  "Framework :: Matplotlib",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
  "cartopy>=0.20.0",
  "click",
  "matplotlib>=3.4",
  "numpy",
  "packaging",
  "pyproj",
  "scipy",
]

optional-dependencies.all = [ "eomaps[io,classify,wms,shade,gui]" ]
optional-dependencies.all_nogui = [ "eomaps[io,classify,wms,shade]" ]
optional-dependencies.classify = [ "mapclassify" ]
optional-dependencies.gui = [
  "pyqt5",
  "qtpy",
]
optional-dependencies.io = [
  "geopandas",
  "netcdf4",
  "pandas",
  "rioxarray",
  "xarray",
]
optional-dependencies.shade = [
  "dask[dataframe]", # to address https://github.com/dask/dask/issues/10995
  "datashader",
]
optional-dependencies.test = [
  "eomaps[io,classify,wms,shade,gui,test]",
  "pytest",
  "pytest-mpl",
]
optional-dependencies.wms = [
  "owslib",
  "requests",
]
urls.Documentation = "https://eomaps.readthedocs.io/"
urls.Repository = "https://github.com/raphaelquast/eomaps"
scripts.eomaps = "eomaps.scripts.open:cli"

[tool.setuptools.packages.find]
include = [ "eomaps", "eomaps.scripts", "eomaps.qtcompanion", "eomaps.qtcompanion.widgets" ]

[tool.setuptools.package-data]
eomaps = [ "logo.png", "NE_features.json", "qtcompanion/icons/*" ]

[tool.pyproject-fmt]
keep_full_version = true

[tool.pytest.ini_options]
mpl-use-full-test-name = "True"
mpl-default-style = "default"
mpl-results-path = "img_comparison_results"
filterwarnings = [
  "ignore:Downloading*",
  "ignore:Passing a SingleBlockManager to Series is deprecated *:DeprecationWarning",
  "ignore:Passing a BlockManager to GeoDataFrame is deprecated *:DeprecationWarning",
  "ignore:Passing a SingleBlockManager to GeoSeries is deprecated *:DeprecationWarning",
  "ignore:Pyarrow will become a required dependency of pandas *:DeprecationWarning",
  "ignore:Geometry is in a geographic CRS. Results from *:UserWarning",
  "ignore:Back azimuth is being returned by default *:UserWarning",
  "ignore:Conversion of an array with ndim > 0:DeprecationWarning",
]
