[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eomaps", "eomaps.scripts", "eomaps.qtcompanion", "eomaps.qtcompanion.widgets"]

[tool.setuptools.package-data]
eomaps = ["logo.png", "NE_features.json", "qtcompanion/icons/*"]


[project]
name = "eomaps"
version = "8.3.3"
description = "A library to create interactive maps of geographical datasets."
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.8"

authors = [
  { name="Raphael Quast", email="raphael.quast@geo.tuwien.ac.at" },
]

keywords = ["Visualization", "Plotting", "Maps", "Geographical Data"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib>=3.4",
    "cartopy>=0.20.0",
    "pyproj",
    "packaging",
    "click"
]

[project.optional-dependencies]

all = ["eomaps[io, classify, wms, shade, gui]"]

all_nogui = ["eomaps[io, classify, wms, shade]"]

io = [
    "pandas",
    "geopandas",
    "xarray",
    "netcdf4",
    "rioxarray"
]

classify = ["mapclassify"]

wms = [
    "owslib",
    "requests",
]

shade = [
    "datashader",
    "dask[dataframe]",  # to address https://github.com/dask/dask/issues/10995
]

gui = [
    "PyQt5",
    "qtpy"
    ]

test = [
    "eomaps[io, classify, wms, shade, gui, test]",
    "pytest",
    "pytest-mpl"
]

[project.scripts]
eomaps = "eomaps.scripts.open:cli"

[project.urls]
Documentation = "https://eomaps.readthedocs.io/"
Repository = "https://github.com/raphaelquast/eomaps"

[tool.pytest.ini_options]
mpl-use-full-test-name = "True"
mpl-default-style = "default"
mpl-results-path = "img_comparison_results"
filterwarnings = [
    "ignore:Downloading*",
    "ignore:Passing a SingleBlockManager to Series is deprecated *:DeprecationWarning",
    "ignore:Passing a BlockManager to GeoDataFrame is deprecated *:DeprecationWarning",
    "ignore:Passing a SingleBlockManager to GeoSeries is deprecated *:DeprecationWarning",
    "ignore:Pyarrow will become a required dependency of pandas *:DeprecationWarning",
    "ignore:Geometry is in a geographic CRS. Results from *:UserWarning",
    "ignore:Back azimuth is being returned by default *:UserWarning",
    "ignore:Conversion of an array with ndim > 0:DeprecationWarning"
]

[tool.codespell]
ignore-words-list = [
    "vor", # For voronoi, not "for"
    "ot", # abbreviation for offset-top
]
skip = [
    "eomaps/webmap_containers.py", # Non-English languages in docstrings

]
ignore-regex = [
    "[A-Za-z0-9+/]{100,}" # Ignore long base64 strings
]
